--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -183,44 +183,44 @@ CLOSE_BUTTON  : "🗑ᴄʟᴏsᴇ🗑"
 BACK_BUTTON : "🔙ʙᴀᴄᴋ🔙"
 
 S_B_1 : "ﾒ ᴀᴅᴅ ᴍᴇ ʙᴀʙʏ ﾒ"
-S_B_2 : "sᴜᴘᴘᴏʀᴛ"
+S_B_2 : "✰sᴜᴘᴘᴏʀᴛ✰"
 S_B_3 : "ﾒ ᴀᴅᴅ ᴍᴇ ʙᴀʙʏ ﾒ"
-S_B_4 : "ᴄᴏᴍᴍᴀɴᴅs"
-S_B_5 : "ᴄʀᴇᴀᴛᴏʀ"
-S_B_6 : "ᴄʜᴀɴɴᴇʟ"
-S_B_7 : "ʀᴇᴘᴏ"
-S_B_8 : "ʏᴏᴜᴛᴜʙᴇ"
-S_B_9 : "sᴜᴘᴘᴏʀᴛ"
+S_B_4 : "✰ᴄᴏᴍᴍᴀɴᴅs✰"
+S_B_5 : "✰ᴄʀᴇᴀᴛᴏʀ✰"
+S_B_6 : "✰ᴄʜᴀɴɴᴇʟ✰"
+S_B_7 : "✰ʀᴇᴘᴏ✰"
+S_B_8 : "✰ʏᴏᴜᴛᴜʙᴇ✰"
+S_B_9 : "✰sᴜᴘᴘᴏʀᴛ✰"
 
-H_B_1 : "ᴀᴅᴍɪɴ"
-H_B_2 : "ᴀᴜᴛʜ"
-H_B_3 : "ɢ-ᴄᴀsᴛ"
-H_B_4 : "ʙʟ-ᴄʜᴀᴛ"
-H_B_5 : "ʙʟ-ᴜsᴇʀ"
-H_B_6 : "ᴄ-ᴘʟᴀʏ"
-H_B_7 : "ɢ-ʙᴀɴ"
-H_B_8 : "ʟᴏᴏᴘ"
-H_B_9 : "ʟᴏɢ"
-H_B_10 : "ᴘɪɴɢ"
-H_B_11 : "ᴘʟᴀʏ"
-H_B_12 : "sʜᴜғғʟᴇ"
-H_B_13 : "sᴇᴇᴋ"
-H_B_14 : "sᴏɴɢ"
-H_B_15 : "sᴘᴇᴇᴅ"
-H_B_16 : "ɢᴘᴛ"
-H_B_17 : "sᴛɪᴄᴋᴇʀ"
-H_B_18 : "ᴛᴀɢ-ᴀʟʟ"
-H_B_19 : "ɪɴғᴏ"
-H_B_20 : "ɢʀᴏᴜᴘ"
-H_B_21 : "ᴇxᴛʀᴀ"
-H_B_22 : "ɪᴍᴀɢᴇ"
-H_B_23 : "ᴀᴄᴛɪᴏɴ"
-H_B_24 : "sᴇᴀʀᴄʜ"
+H_B_1 : "✰ᴀᴅᴍɪɴ✰"
+H_B_2 : "✰ᴀᴜᴛʜ✰"
+H_B_3 : "✰ɢ-ᴄᴀsᴛ✰"
+H_B_4 : "✰ʙʟ-ᴄʜᴀᴛ✰"
+H_B_5 : "✰ʙʟ-ᴜsᴇʀ✰"
+H_B_6 : "✰ᴄ-ᴘʟᴀʏ✰"
+H_B_7 : "✰ɢ-ʙᴀɴ✰"
+H_B_8 : "✰ʟᴏᴏᴘ✰"
+H_B_9 : "✰ʟᴏɢ✰"
+H_B_10 : "✰ᴘɪɴɢ✰"
+H_B_11 : "✰ᴘʟᴀʏ✰"
+H_B_12 : "✰sʜᴜғғʟᴇ✰"
+H_B_13 : "✰sᴇᴇᴋ✰"
+H_B_14 : "✰sᴏɴɢ✰"
+H_B_15 : "✰sᴘᴇᴇᴅ✰"
+H_B_16 : "✰ɢᴘᴛ✰"
+H_B_17 : "✰sᴛɪᴄᴋᴇʀ✰"
+H_B_18 : "✰ᴛᴀɢ-ᴀʟʟ✰"
+H_B_19 : "✰ɪɴғᴏ✰"
+H_B_20 : "✰ɢʀᴏᴜᴘ✰"
+H_B_21 : "✰sᴘᴇᴄɪᴀʟ✰"
+H_B_22 : "✰ɪᴍᴀɢᴇ✰"
+H_B_23 : "✰ᴀᴄᴛɪᴏɴ✰"
+H_B_24 : "✰sᴇᴀʀᴄʜ✰"
 
-P_B_1 : "ᴀᴜᴅɪᴏ"
-P_B_2 : "ᴠɪᴅᴇᴏ"
-P_B_3 : "ʟɪᴠᴇ sᴛʀᴇᴀᴍ"
-P_B_4 : "ɴᴏʀᴍᴀʟ"
+P_B_1 : "♬ᴀᴜᴅɪᴏ♬"
+P_B_2 : "✭ᴠɪᴅᴇᴏ✭"
+P_B_3 : "✯ʟɪᴠᴇ sᴛʀᴇᴀᴍ✯"
+P_B_4 : "✰ɴᴏʀᴍᴀʟ ✰"
 
 ST_B_1 : "ᴀᴜᴛʜ ᴜsᴇʀs"
 ST_B_2 : "ᴘʟᴀʏ ᴍᴏᴅᴇ"
@@ -237,9 +237,9 @@ ST_B_12 : "ɪɴʟɪɴᴇ"
 ST_B_13 : "ᴀᴅᴍɪɴ ᴄᴍᴅs ➜"
 ST_B_14 : "ᴘʟᴀʏ ᴛʏᴘᴇ ➜"
 
-SA_B_1 : "ᴏᴠᴇʀᴀʟʟ sᴛᴀᴛs"
-SA_B_2 : "ɢᴇɴᴇʀᴀʟ"
-SA_B_3 : "ᴏᴠᴇʀᴀʟʟ"
+SA_B_1 : "✰ᴏᴠᴇʀᴀʟʟ sᴛᴀᴛs✰"
+SA_B_2 : "✰ɢᴇɴᴇʀᴀʟ✰"
+SA_B_3 : "✰ᴏᴠᴇʀᴀʟʟ✰"
 
 QU_B_1 : "ǫᴜᴇᴜᴇ"
 QU_B_2 : " {0} —————————— {1}"
