--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,25 @@ admin_39 : "» ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_40 : "ᴜᴘᴠᴏᴛᴇᴅ."
 
 start_1 : "✅ ᴛʜᴀɴᴋ ʏᴏᴜ ғᴏʀ ᴜsɪɴɢ ᴍᴇ ɪɴ\nᴄʜᴀᴛ »  {0}\n\n🥀 ɪғ ʏᴏᴜ ʜᴀᴠᴇ📀ᴀɴʏ🤔ǫᴜᴇsᴛɪᴏɴ\nᴛʜᴇɴ ᴀsᴋ💬ᴛᴏ ᴍᴛ ᴏᴡɴᴇʀ.\n\n💐 ᴊᴏɪɴ ᴏᴜʀ [ᴜᴘᴅᴀᴛᴇs](https://t.me/Late_Night_Chatters) ‖ [sᴜᴘᴘᴏʀᴛ](https://t.me/Late_Night_Chatters)\nғᴏʀ ɢᴇᴛᴛɪɴғ ɴᴇᴡ ᴜᴘᴅᴀᴛᴇs 💞..."
-start_2 : "      🍷ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ {0}🍷\n\n🌹sᴀɴᴋɪ ᴍᴜsɪᴄ🌼ᴘʟᴀʏᴇʀ📀ᴛʜɪs🎵ʙᴏᴛ🤖ɪs🍁ᴠᴇʀʏ🌷ᴘᴏᴡᴇʀғᴜʟ✨ᴀɴᴅ🫵ʏᴏᴜ🪷ᴄᴀɴ🫧ᴍᴀɴᴀɢᴇ🪙ʏᴏᴜʀ🌹ɢʀᴏᴜᴘ❤ᴀɴᴅ👀ʟɪsᴛᴇɴ🌸ʟᴀɢ💐ғʀᴇᴇ🌺ᴍᴜsɪᴄ🌷"
+start_2 : "
+admin_26 : "ғᴀɪʟᴇᴅ ᴛᴏ sᴇᴇᴋ."
+admin_27 : "» ᴏɴʟʏ ʏᴏᴜᴛᴜʙᴇ sᴛʀᴇᴀᴍ's sᴘᴇᴇᴅ ᴄᴀɴ ʙᴇ ᴄᴏɴᴛʀᴏʟʟᴇᴅ ᴄᴜʀʀᴇɴᴛʟʏ."
+admin_28 : "<b><u>{0} sᴘᴇᴇᴅ ᴄᴏɴᴛʀᴏʟ ᴘᴀɴᴇʟ</b></u>\n\nᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʙᴜᴛᴛᴏɴs ʙᴇʟᴏᴡ ᴛᴏ ᴄʜᴀɴɢᴇ ᴛʜᴇ sᴘᴇᴇᴅ ᴏғ ᴄᴜʀʀᴇɴᴛʟʏ ᴘʟᴀʏɪɴɢ sᴛʀᴇᴀᴍ ᴏɴ ᴠɪᴅᴇᴏᴄʜᴀᴛ."
+admin_29 : "» ʙᴏᴛ ɪs ᴀʟʀᴇᴀᴅʏ ᴘʟᴀʏɪɴɢ ᴏɴ ɴᴏʀᴍᴀʟ sᴘᴇᴇᴅ."
+admin_30 : "» ᴘʟᴇᴀsᴇ ᴡᴀɪᴛ...\n\nsᴏᴍᴇᴏɴᴇ ᴇʟsᴇ ɪs ᴛʀʏɪɴɢ ᴛᴏ ᴄʜᴀɴɢᴇ ᴛʜᴇ sᴘᴇᴇᴅ ᴏғ ᴛʜᴇ sᴛʀᴇᴀᴍ."
+admin_31 : "ᴄʜᴀɴɢɪɴɢ sᴘᴇᴇᴅ..."
+admin_32 : "» ᴛʀʏɪɴɢ ᴛᴏ ᴄʜᴀɴɢᴇ ᴛʜᴇ sᴘᴇᴇᴅ ᴏғ ᴛʜᴇ ᴏɴɢᴏɪɴɢ sᴛʀᴇᴀᴍ...\n\n<b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {0}"
+admin_33 : "» ғᴀɪʟᴇᴅ ᴛᴏ ᴄʜᴀɴɢᴇ ᴛʜᴇ sᴘᴇᴇᴅ ᴏғ ᴛʜᴇ ᴏɴɢᴏɪɴɢ sᴛʀᴇᴀᴍ."
+admin_34 : "» ᴄʜᴀɴɢᴇᴅ ᴛʜᴇ sᴘᴇᴇᴅ ᴏғ ᴛʜᴇ ᴏɴɢᴏɪɴɢ sᴛʀᴇᴀᴍ ᴛᴏ {0}x\n\n<b>ʀᴇǫᴜᴇsᴛᴇᴅ ʙʏ :</b> {1}"
+admin_35 : "ᴛʜᴇ ᴠᴏᴛɪɴɢ ʜᴀs ᴇɴᴅᴇᴅ ʙᴇᴄᴀᴜsᴇ ᴛʜᴇ ᴛʀᴀᴄᴋ ʜᴀs ᴇɴᴅᴇᴅ ғᴏʀ ᴡʜɪᴄʜ ᴛʜᴇ ᴠᴏᴛɪɴɢ ᴡᴀs ᴘʀᴏᴠɪᴅᴇᴅ."
+admin_36 : "ғᴀɪʟᴇᴅ ᴛᴏ ᴘᴇʀғᴏʀᴍ ᴛʜɪs ᴀᴄᴛɪᴏɴ ʙᴇᴄᴀᴜsᴇ ғᴏʀ ᴡʜɪᴄʜ ᴛʀᴀᴄᴋ ᴛʜᴇ ᴠᴏᴛɪɴɢ ᴡᴀs ᴘʀᴏᴠɪᴅᴇᴅ ɪs ᴇɪᴛʜᴇʀ ᴇɴᴅᴇᴅ ᴏʀ sᴛᴏᴘᴘᴇᴅ."
+admin_37 : "sᴜᴄᴄᴇssғᴜʟʟʏ ɢᴏᴛ <code>{0}</code> ᴜᴘᴠᴏᴛᴇs."
+admin_38 : "» ᴀᴅᴅᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
+admin_39 : "» ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
+admin_40 : "ᴜᴘᴠᴏᴛᴇᴅ."
+
+start_1 : "✅ ᴛʜᴀɴᴋ ʏᴏᴜ ғᴏʀ ᴜsɪɴɢ ᴍᴇ ɪɴ\nᴄʜᴀᴛ »  {0}\n\n🥀 ɪғ ʏᴏᴜ ʜᴀᴠᴇ📀ᴀɴʏ🤔ǫᴜᴇsᴛɪᴏɴ\nᴛʜᴇɴ ᴀsᴋ💬ᴛᴏ ᴍᴛ ᴏᴡɴᴇʀ.\n\n💐 ᴊᴏɪɴ ᴏᴜʀ [ᴜᴘᴅᴀᴛᴇs](https://t.me/Late_Night_Chatters) ‖ [sᴜᴘᴘᴏʀᴛ](https://t.me/Late_Night_Chatters)\nғᴏʀ ɢᴇᴛᴛɪɴғ ɴᴇᴡ ᴜᴘᴅᴀᴛᴇs 💞..."
+start_2 : "    🚩ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ {0}🍷\n\n❥ sᴀɴᴋɪ ᴍᴜsɪᴄ ᴘʟᴀʏᴇʀ ᴛʜɪs ʙᴏᴛ ɪs ᴠᴇʀʏ ᴘᴏᴡᴇʀғᴜʟ ᴀɴᴅ ʏᴏᴜ ᴄᴀɴ ᴍᴀɴᴀɢᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴀɴᴅ ʟɪsᴛᴇɴ ʟᴀɢ ғʀᴇᴇ ᴍᴜsɪᴄ /n────────────────── /n➻ ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʜᴇʟᴩ ʙᴜᴛᴛᴏɴ ᴛᴏ ɢᴇᴛ  ɪɴғᴏʀᴍᴀᴛɪᴏɴ ᴀʙᴏᴜᴛ ᴍʏ ᴍᴏᴅᴜʟᴇs ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅs./n/nʙᴏᴛ ᴄʀᴇᴀᴛᴏʀ ❥[ᴍʀ.sᴜᴍɪᴛ✰](https://t.me/KAMINA_XDX)"
 start_3 : "✅ ᴛʜᴀɴᴋ ʏᴏᴜ ғᴏʀ ᴜsɪɴɢ ᴍᴇ ɪɴ\nʏᴏᴜʀ 🌺 ᴄʜᴀᴛs 🌿 ɢʀᴏᴜᴘ ✨ ...\n\nᴀ ᴜsᴇʀɴᴀᴍᴇ › @{1}\nᴀssɪsᴛᴀɴᴛ ɪᴅ : `{2}`\n\n💐 ᴊᴏɪɴ ᴏᴜʀ ᴜᴘᴅᴀᴛᴇs ‖ sᴜᴘᴘᴏʀᴛ\nғᴏʀ ɢᴇᴛᴛɪɴɢ ɴᴇᴡ ᴜᴘᴅᴀᴛᴇs 💞..."
 start_4 : "💥 sᴀɴᴋɪ ᴍᴜsɪᴄ💿 ᴏᴡɴᴇʀ [{1}] 💞 ʜᴀs ᴊᴜsᴛ 🌺 ᴊᴏɪɴᴇᴅ 😍 ʏᴏᴜʀ ᴄʜᴀᴛ 🥀."
 start_5 : "🥀ᴛʜᴇ sᴜᴅᴏ ᴜsᴇʀ ᴏғ {0}, [{1}] ᴊᴜsᴛ ᴊᴏɪɴᴇᴅ ʏᴏᴜʀ ᴄʜᴀᴛ🌹."
