--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -191,6 +191,7 @@ S_B_6 : "✰ᴄʜᴀɴɴᴇʟ✰"
 S_B_7 : "✰ʀᴇᴘᴏ✰"
 S_B_8 : "✰ʏᴏᴜᴛᴜʙᴇ✰"
 S_B_9 : "✰sᴜᴘᴘᴏʀᴛ✰"
+S_B_10 : "✰ᴅᴜɴɪʏᴀ✰"
 
 H_B_1 : "✰ᴀᴅᴍɪɴ✰"
 H_B_2 : "✰ᴀᴜᴛʜ✰"
