--- a/strings/langs/en.yml
+++ b/strings/langs/en.yml
@@ -85,7 +85,7 @@ admin_39 : "» ʀᴇᴍᴏᴠᴇᴅ 1 ᴜᴘᴠᴏᴛᴇ."
 admin_40 : "ᴜᴘᴠᴏᴛᴇᴅ."
 
 start_1 : "✅ ᴛʜᴀɴᴋ ʏᴏᴜ ғᴏʀ ᴜsɪɴɢ ᴍᴇ ɪɴ\nᴄʜᴀᴛ »  {0}\n\n🥀 ɪғ ʏᴏᴜ ʜᴀᴠᴇ📀ᴀɴʏ🤔ǫᴜᴇsᴛɪᴏɴ\nᴛʜᴇɴ ᴀsᴋ💬ᴛᴏ ᴍᴛ ᴏᴡɴᴇʀ.\n\n💐 ᴊᴏɪɴ ᴏᴜʀ [ᴜᴘᴅᴀᴛᴇs](https://t.me/Late_Night_Chatters) ‖ [sᴜᴘᴘᴏʀᴛ](https://t.me/Late_Night_Chatters)\nғᴏʀ ɢᴇᴛᴛɪɴғ ɴᴇᴡ ᴜᴘᴅᴀᴛᴇs 💞..."
-start_2 : "🚩ʜᴀʀ ʜᴀʀ ᴍᴀʜᴀᴅᴇᴠ 🚩\n🚩ᴊᴀɪ sʜʀᴇᴇ ʀᴀᴍ🚩\n🚩ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ {0}🍷\n\n❥ sᴀɴᴋɪ ᴍᴜsɪᴄ ᴘʟᴀʏᴇʀ ᴛʜɪs ʙᴏᴛ ɪs ᴠᴇʀʏ ᴘᴏᴡᴇʀғᴜʟ ᴀɴᴅ ʏᴏᴜ ᴄᴀɴ ᴍᴀɴᴀɢᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴀɴᴅ ʟɪsᴛᴇɴ ʟᴀɢ ғʀᴇᴇ ᴍᴜsɪᴄ \n────────────────── \n➻ ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʜᴇʟᴩ ʙᴜᴛᴛᴏɴ ᴛᴏ ɢᴇᴛ  ɪɴғᴏʀᴍᴀᴛɪᴏɴ ᴀʙᴏᴜᴛ ᴍʏ ᴍᴏᴅᴜʟᴇs ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅs.\n\nʙᴏᴛ ᴄʀᴇᴀᴛᴏʀ ❥[ᴍʀ.sᴜᴍɪᴛ✰](https://t.me/KAMINA_XDX)"
+start_2 : "🚩ʜᴀʀ ʜᴀʀ ᴍᴀʜᴀᴅᴇᴠ 🚩\n🚩ᴊᴀɪ sʜʀᴇᴇ ʀᴀᴍ🚩\n🚩ᴡᴇʟᴄᴏᴍᴇ ᴛᴏ {0}🍷\n\n❥ sᴀɴᴋɪ ᴍᴜsɪᴄ ᴘʟᴀʏᴇʀ ᴛʜɪs ʙᴏᴛ ɪs ᴠᴇʀʏ ᴘᴏᴡᴇʀғᴜʟ ᴀɴᴅ ʏᴏᴜ ᴄᴀɴ ᴍᴀɴᴀɢᴇ ʏᴏᴜʀ ɢʀᴏᴜᴘ ᴀɴᴅ ʟɪsᴛᴇɴ ʟᴀɢ ғʀᴇᴇ ᴍᴜsɪᴄ \n────────────────── \n➻ ᴄʟɪᴄᴋ ᴏɴ ᴛʜᴇ ʜᴇʟᴩ ʙᴜᴛᴛᴏɴ ᴛᴏ ɢᴇᴛ  ɪɴғᴏʀᴍᴀᴛɪᴏɴ ᴀʙᴏᴜᴛ ᴍʏ ᴍᴏᴅᴜʟᴇs ᴀɴᴅ ᴄᴏᴍᴍᴀɴᴅs.\n\nʙᴏᴛ ᴄʀᴇᴀᴛᴏʀ ❥[ᴍʀ.sᴜᴍɪᴛ✰](https://t.me/ToXiC_BoY_OFFICIAL)"
 start_3 : "✅ ᴛʜᴀɴᴋ ʏᴏᴜ ғᴏʀ ᴜsɪɴɢ ᴍᴇ ɪɴ\nʏᴏᴜʀ 🌺 ᴄʜᴀᴛs 🌿 ɢʀᴏᴜᴘ ✨ ...\n\nᴀ ᴜsᴇʀɴᴀᴍᴇ › @{1}\nᴀssɪsᴛᴀɴᴛ ɪᴅ : `{2}`\n\n💐 ᴊᴏɪɴ ᴏᴜʀ ᴜᴘᴅᴀᴛᴇs ‖ sᴜᴘᴘᴏʀᴛ\nғᴏʀ ɢᴇᴛᴛɪɴɢ ɴᴇᴡ ᴜᴘᴅᴀᴛᴇs 💞..."
 start_4 : "💥 sᴀɴᴋɪ ᴍᴜsɪᴄ💿 ᴏᴡɴᴇʀ [{1}] 💞 ʜᴀs ᴊᴜsᴛ 🌺 ᴊᴏɪɴᴇᴅ 😍 ʏᴏᴜʀ ᴄʜᴀᴛ 🥀."
 start_5 : "🥀ᴛʜᴇ sᴜᴅᴏ ᴜsᴇʀ ᴏғ {0}, [{1}] ᴊᴜsᴛ ᴊᴏɪɴᴇᴅ ʏᴏᴜʀ ᴄʜᴀᴛ🌹."
